# mupager

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  .gitmodules  .neocmakelint.toml  .nvim.lua  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  KITTY_GRAPHICS_PROTOCOL.md  LICENSE  PROJECT_DETAILS.md  PROJECT_PLAN.md  README.md  flake.nix  justfile  neovim.yml  selene.toml
.claude/commands/: review.md  sanitize.md
.copr/: Makefile
.github/workflows/: ci.yml  release.yml
cmake/: CPM.cmake  CompilerWarnings.cmake  Sanitizers.cmake
doc/: mupager.1
fixtures/: mupager.toml
nix/: notcurses-da1-fix.patch
nvim/doc/: mupager.txt  tags
nvim/lua/mupager/: commands.lua  config.lua  init.lua  log.lua  server.lua  statusline.lua  telescope.lua
nvim/lua/mupdf/: init.lua
packaging/arch/: PKGBUILD
packaging/debian/: build-source-package.sh  changelog  control  copyright  rules
packaging/rpm/: mupager.spec
server/: CMakeLists.txt
server/src/: action.hpp  action_traits.hpp  app.cpp  app.h  app.hpp  args.cpp  args.h  args.hpp  base64.cpp  base64.h  base64.test.cpp  color.cpp  color.h  color.test.cpp  color_scheme.h  color_scheme.hpp  command.h  command.hpp  config.cpp  config.h  converter.cpp  converter.hpp  converter.test.cpp  diagnose.cpp  diagnose.hpp  document.cpp  document.h  document.hpp  document.test.cpp  frontend.cpp  frontend.h  frontend.hpp  geometry.h  geometry.hpp  geometry.test.cpp  input_event.h  key_bindings.cpp  key_bindings.h  key_bindings.test.cpp  kitty.cpp  (+28 more)
server/src/graphics/: kitty.cpp  kitty.h  kitty.test.cpp  pixmap.cpp  pixmap.test.cpp  sgr.h
server/src/neovim/: frontend.cpp  frontend.h  frontend.hpp  loop.cpp  loop.hpp  rpc_transport.cpp  rpc_transport.h  rpc_transport.hpp
server/src/terminal/: controller.cpp  controller.h  controller.hpp  frontend.cpp  frontend.h  frontend.hpp  input.cpp  input.h  input.hpp  key_bindings.cpp  key_bindings.h  key_bindings.hpp  key_bindings.test.cpp  loop.cpp  loop.h  osc_query.cpp  osc_query.h
server/src/util/: base64.cpp  base64.test.cpp  stopwatch.h
src/: CMakeLists.txt  action.hpp  app.cpp  app.hpp  args.cpp  args.hpp  color.cpp  color.test.cpp  color_scheme.hpp  config.cpp  config.hpp  converter.cpp  diagnose.cpp  document.test.cpp  frontend.cpp  frontend.hpp  main.cpp  page.cpp  page.hpp  page_manager.cpp  page_manager.hpp
src/graphics/: kitty.cpp  kitty.test.cpp  pixmap.hpp
src/neovim/: frontend.hpp  rpc_transport.cpp  rpc_transport.hpp
src/terminal/: controller.cpp  frontend.cpp  frontend.hpp  input.cpp  key_bindings.hpp  osc_query.cpp  osc_query.hpp
src/util/: base64.hpp  base64.test.cpp
wiki/: Command-Line-Reference.md  Configuration.md  Converters-and-Watch-Mode.md  Features.md  Getting-Started.md  Home.md  Kitty-Graphics-Protocol.md  Known-Issues-and-Gotchas.md  Neovim-Mode.md  Render-Pipeline.md  Requirements-and-Compatibility.md  Terminal-Mode.md  Troubleshooting.md  _Sidebar.md
